deploy/payment-db/overlays/service-mesh/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: payment-db
spec:
  host: payment-db
  subsets:
  - name: v1
    labels:
      version: v1
