deploy/payment-db/overlays/service-mesh/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment-db
spec:
  hosts:
  - payment-db
  http:
  - route:
    - destination:
        host: payment-db
        subset: v1
